--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="field"></div>
+    <canvas class="field" width="410" height="410"></canvas>
     <form>
         <input type="button" value="Run">
         <textarea cols="100" rows="20"></textarea>
