Added game play instructions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
         <input type="button" value="Run">
         <textarea cols="30" rows="20"></textarea>
     </form>
+    <div class="instructions">
+        <h2>Instructions</h2>
+        <p>
+            To control the robot you have to give it programming instructions. The
+            available instructions are:
+        </p>
+        <code>
+            robot.moveRight(int steps);<br>
+            robot.moveLeft(int steps);<br>
+            robot.moveUp(int steps);<br>
+            robot.moveDown(int steps);<br>
+        </code>
+        <p>
+            All move-functions take one parameter, called <code>steps</code>. The
+            type of this parameter is <code>int</code>, which just means that it
+            should be a whole number, written using digits.
+        </p>
+        <p>
+            For example, the following program would make the robot walk two steps
+            to the right, and then one step up.
+        </p>
+        <code>
+            robot.moveRight(2);<br>
+            robot.moveUp(1);
+        </code>
+    </div>
+
     <script src="jquery-2.1.4.js"></script>
     <script src="script.js"></script>
 </body>
