Format html source

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="instructions">
         <h2>Instructions</h2>
         <p>
-            To control the robot you have to give it programming instructions. The
-            available instructions are:
+            To control the robot you have to give it programming instructions.
+            The available instructions are:
         </p>
         <code>
             robot.moveRight(int steps);<br>
@@ -28,13 +28,13 @@
             robot.moveDown(int steps);<br>
         </code>
         <p>
-            All move-functions take one parameter, called <code>steps</code>. The
-            type of this parameter is <code>int</code>, which just means that it
-            should be a whole number, written using digits.
+            All move-functions take one parameter, called <code>steps</code>.
+            The type of this parameter is <code>int</code>, which just means
+            that it should be a whole number, written using digits.
         </p>
         <p>
-            For example, the following program would make the robot walk two steps
-            to the right, and then one step up.
+            For example, the following program would make the robot walk two
+            steps to the right, and then one step up.
         </p>
         <code>
             robot.moveRight(2);<br>
