--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             robot.moveLeft(int steps);<br>
             robot.moveUp(int steps);<br>
             robot.moveDown(int steps);<br>
+            robot.pushButton();
         </code>
         <p>
             All move-functions take one parameter, called <code>steps</code>.
@@ -40,6 +41,11 @@
             robot.moveRight(2);<br>
             robot.moveUp(1);
         </code>
+        <p>
+            When the robot stands on a button it can push it using the
+            <code>pushButton</code> function. This function takes no
+            parameters.
+        </p>
     </div>
 
     <script src="jquery-2.1.4.js"></script>
