--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 
 <body>
-    <canvas class="field" width="410" height="410"></canvas>
-    <form>
-        <input type="button" value="Run">
-        <textarea cols="30" rows="20"></textarea>
-    </form>
+    <div class="game_area">
+        <canvas class="field" width="410" height="410"></canvas>
+        <form>
+            <input type="button" value="Run">
+            <textarea cols="30" rows="20"></textarea>
+        </form>
+    </div>
     <div class="instructions">
         <h2>Instructions</h2>
         <p>
