Fix formatting for code listing

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             robot.moveLeft(int steps);<br>
             robot.moveUp(int steps);<br>
             robot.moveDown(int steps);<br>
-            robot.pushButton();
+            robot.pushButton();<br>
             robot.openChest();
         </code>
         <p>
