--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="game_area">
+        <canvas class="game_menu" width="780" height="410"></canvas>
         <canvas class="field" width="410" height="410"></canvas>
         <form>
             <input type="button" value="Run">
