Fixed some html layout and moved the instructions to the left, updated fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Robot Game</title>
 
   <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
@@ -14,31 +16,33 @@
         <canvas class="game_menu" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
         <form>
-            <input type="button" value="Run">
             <textarea cols="30" rows="20"></textarea>
+            <input type="button" value="Run">
         </form>
     </div>
     <div class="instructions">
-        <h2>Instructions</h2>
+        <h1>Instructions</h1>
         <p>
             To control the robot you have to give it programming instructions.
             The available instructions are:
         </p>
-        <code>
-            robot.moveRight(int steps);<br>
-            robot.moveLeft(int steps);<br>
-            robot.moveUp(int steps);<br>
-            robot.moveDown(int steps);<br>
-            robot.pushButton();<br>
-            robot.openChest();<br>
-            robot.hasRedKey();<br>
-            robot.hasGreenKey();<br>
-            robot.hasBlueKey();<br>
-            if (robot.has&lt;Color&gt;Key()) {<br>
-            &nbsp;&nbsp;&nbsp;&nbsp;robot.&lt;SomeMethod&gt;();<br>
-            }
-            robot.openDoor();
-        </code>
+        <div class="info-area">
+            <code>
+                robot.moveRight(int steps);<br>
+                robot.moveLeft(int steps);<br>
+                robot.moveUp(int steps);<br>
+                robot.moveDown(int steps);<br>
+                robot.pushButton();<br>
+                robot.openChest();<br>
+                robot.hasRedKey();<br>
+                robot.hasGreenKey();<br>
+                robot.hasBlueKey();<br>
+                if (robot.has&lt;Color&gt;Key()) {<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;robot.&lt;SomeMethod&gt;();<br>
+                }
+                robot.openDoor();
+            </code>
+        </div>
         <p>
             All move-functions take one parameter, called <code>steps</code>.
             The type of this parameter is <code>int</code>, which just means
@@ -50,10 +54,12 @@
             For example, the following program would make the robot walk two
             steps to the right, and then one step up.
         </p>
-        <code>
-            robot.moveRight(2);<br>
-            robot.moveUp();
-        </code>
+        <div class="info-area">
+            <code>
+                robot.moveRight(2);<br>
+                robot.moveUp();
+            </code>
+        </div>
         <p>
             When the robot stands on a button it can push it using the
             <code>pushButton</code> function. This function takes no
