--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Robot Game</title>
+    <title>Robot Game</title>
 
-  <link rel="stylesheet" href="style.css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -16,10 +16,12 @@
         <canvas class="game_menu" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
         <form>
-            <textarea cols="30" rows="20"></textarea>
-            <input type="button" value="Run">
+            <textarea cols="30" rows="20" placeholder="Put your commands here"></textarea>
+            <input type="button" class="run" value="Run" />
+            <input type="reset" class="reset" value="Clear" />
         </form>
     </div>
+    <input type="button" class="restart" value="Restart" />
     <div class="instructions">
         <h1>Instructions</h1>
         <p>
