--- a/index.html
+++ b/index.html
@@ -91,5 +91,14 @@
 
     <script src="jquery-2.1.4.js"></script>
     <script src="script.js"></script>
+
+    <div class="hidden">
+        <!-- prefetch all pictures -->
+        <img src="img_push/robot_push_1.png">
+        <img src="img_push/robot_push_2.png">
+        <img src="img_push/robot_push_3.png">
+        <img src="img_push/robot_push_4.png">
+        <img src="img_push/robot_push_5.png">
+    </div>
 </body>
 </html>
