Improved code input form

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <canvas class="game_menu" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
         <form>
-            <textarea cols="30" rows="20"></textarea>
+            <textarea cols="30" rows="20" placeholder="Write your program here"></textarea>
             <input type="button" value="Run">
+            <input type="reset" value="Clear">
         </form>
     </div>
     <div class="instructions">
