Disable controls when running game

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <canvas class="field" width="410" height="450"></canvas>
         <form>
             <textarea cols="30" rows="20" placeholder="Write your program here"></textarea>
-            <input type="button" value="Run">
+            <input type="button" class="run" value="Run">
             <input type="reset" value="Clear">
         </form>
     </div>
