--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="game_area">
         <canvas class="game_menu" width="780" height="450"></canvas>
+        <canvas class="level_completed_splash" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
         <form>
             <textarea cols="30" rows="20" placeholder="Write your program here"></textarea>
