Added a "Retry" button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <form>
             <textarea cols="30" rows="20" placeholder="Write your program here"></textarea>
             <input type="button" class="run" value="Run">
-            <input type="reset" value="Clear">
+            <input type="button" class="retry hidden" value="Retry">
+            <input type="reset" class="clear" value="Clear">
         </form>
     </div>
     <div class="instructions">
