Don't spell check robot instructions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <canvas class="level_completed_splash" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
         <form>
-            <textarea cols="30" rows="20" placeholder="Write your program here"></textarea>
+            <textarea cols="30" rows="20"
+                placeholder="Write your program here" autocomplete="off"
+                autocorrect="off" autocapitalize="off" spellcheck="false">
+            </textarea>
             <input type="button" class="run" value="Run">
             <input type="button" class="retry hidden" value="Retry">
             <input type="reset" class="clear" value="Clear">
