Method block support in if statements

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             most likely be used together with the <code>if</code> statement.
             The <code>if</code> statement takes a method call that returns
             <code>true</code> or <code>false</code> as a parameter, and if
-            the call returns true the single instruction inside the <code>
-            if</code> statement is executed.
+            the call returns true the instructions inside the <code>if</code>-
+            statement are executed.
         </p>
         <p>
             When the robot stands on a door it can open it using the <code>
