--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
     </div>
 
     <script src="jquery-2.1.4.js"></script>
+    <script src="ast.js"></script>
+    <script src="parser.js"></script>
     <script src="script.js"></script>
 
     <div class="hidden">
