Move levels to separate file

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <script src="tokenizer.js"></script>
     <script src="ast.js"></script>
     <script src="parser.js"></script>
+    <script src="levels.js"></script>
     <script src="script.js"></script>
 
     <div class="hidden">
