Extract code to instruction.js file

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="ast.js"></script>
     <script src="parser.js"></script>
     <script src="levels.js"></script>
+    <script src="instruction.js"></script>
     <script src="script.js"></script>
 
     <div class="hidden">
