--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <script src="parser.js"></script>
     <script src="levels.js"></script>
     <script src="instruction.js"></script>
+    <script src="program.js"></script>
     <script src="script.js"></script>
 
     <div class="hidden">
