Prefetch all images

--- a/index.html
+++ b/index.html
@@ -161,6 +161,17 @@
         <img src="img_push/robot_push_3.png">
         <img src="img_push/robot_push_4.png">
         <img src="img_push/robot_push_5.png">
+        <img id="button_img" src="button.png">
+        <img id="chest_img" src="chest.png">
+        <img id="door_red_img" src="door_red.png">
+        <img id="door_red_open_img" src="door_red_open.png">
+        <img id="door_green_img" src="door_green.png">
+        <img id="door_green_open_img" src="door_green_open.png">
+        <img id="door_blue_img" src="door_blue.png">
+        <img id="door_blue_open_img" src="door_blue_open.png">
+        <img id="key_red_img" src="key_red.png">
+        <img id="key_green_img" src="key_green.png">
+        <img id="key_blue_img" src="key_blue.png">
     </div>
 </body>
 </html>
