Canvas layering to optimize rendering

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <canvas class="game_menu" width="780" height="450"></canvas>
         <canvas class="level_completed_splash" width="780" height="450"></canvas>
         <canvas class="field" width="410" height="450"></canvas>
+        <canvas class="interactive_elements" width="410" height="450"></canvas>
+        <canvas class="robot" width="410" height="450"></canvas>
         <form>
             <textarea cols="30" rows="20"
                 placeholder="Write your program here" autocomplete="off"
