Re-add push animation

--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
 
     <div class="hidden">
         <!-- prefetch all pictures -->
-        <img src="img_push/robot_push_1.png">
-        <img src="img_push/robot_push_2.png">
-        <img src="img_push/robot_push_3.png">
-        <img src="img_push/robot_push_4.png">
-        <img src="img_push/robot_push_5.png">
+        <img id="robot_img" src="robot.png">
+        <img id="robot_animations_push_0" src="img_push/robot_push_1.png">
+        <img id="robot_animations_push_1" src="img_push/robot_push_2.png">
+        <img id="robot_animations_push_2" src="img_push/robot_push_3.png">
+        <img id="robot_animations_push_3" src="img_push/robot_push_4.png">
+        <img id="robot_animations_push_4" src="img_push/robot_push_5.png">
         <img id="button_img" src="button.png">
         <img id="chest_img" src="chest.png">
         <img id="door_red_img" src="door_red.png">
